--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -21,9 +21,9 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/loginbutton"
+        android:id="@+id/loginbutton2"
         android:layout_width="155dp"
-        android:layout_height="117dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
         android:layout_marginEnd="120dp"
         android:layout_marginBottom="167dp"
@@ -34,27 +34,31 @@
 
     <EditText
         android:id="@+id/loginemail"
-        android:layout_width="354dp"
-        android:layout_height="48dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="39dp"
-        android:layout_marginTop="66dp"
+        android:layout_marginTop="104dp"
         android:layout_marginEnd="18dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:text="Email"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/enterdetailstextview" />
 
     <EditText
         android:id="@+id/loginpassword"
-        android:layout_width="354dp"
-        android:layout_height="48dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="39dp"
-        android:layout_marginTop="118dp"
+        android:layout_marginTop="224dp"
+        android:layout_marginEnd="18dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginemail" />
+        app:layout_constraintTop_toBottomOf="@+id/enterdetailstextview" />
 </androidx.constraintlayout.widget.ConstraintLayout>
