--- a/app/src/main/res/layout/show_items.xml
+++ b/app/src/main/res/layout/show_items.xml
@@ -12,6 +12,7 @@
         android:layout_marginStart="137dp"
         android:layout_marginTop="45dp"
         android:layout_marginEnd="137dp"
+        android:onClick="show"
         android:text="Show ItemS"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,8 +20,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/itemslistview"
-        android:layout_width="396dp"
-        android:layout_height="171dp"
+        android:layout_width="379dp"
+        android:layout_height="550dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="49dp"
         app:layout_constraintStart_toStartOf="parent"
